# miden-rust-demo

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
basic-wallet/: Cargo.toml
basic-wallet-tx-script/: Cargo.toml
basic-wallet-tx-script/src/: bindings.rs  lib.rs
basic-wallet-tx-script/wit/: interface.wit
basic-wallet/src/: bindings.rs  lib.rs
basic-wallet/wit/: basic-wallet.wit
counter-contract/: Cargo.toml  README.md
counter-contract-note/: Cargo.toml  README.md  rust-toolchain.toml
counter-contract-note/src/: bindings.rs  lib.rs
counter-contract-note/wit/: interface.wit
counter-contract-note/wit-deps/: miden-core-stdlib.wit
counter-contract/src/: bindings.rs  lib.rs
counter-contract/wit/: interface.wit
counter-contract/wit-deps/: miden-core-base.wit  miden-core-intrinsics.wit  miden.wit
p2id-note/: Cargo.toml  cargo-generate.toml
p2id-note/src/: bindings.rs  lib.rs
p2id-note/wit/: p2id.wit
scripts/: Cargo.toml
scripts/src/: deploy_counter_with_note.rs  helpers.rs  main.rs  wallet.rs
