[workspace]
resolver = "2"
members = [
    "counter-contract",
    "counter-contract-note", 
    "scripts"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Miden Contributors"]
license = "MIT"
repository = "https://github.com/0xMiden/miden-rust-compiler-example"

[workspace.dependencies]
# Common dependencies can be defined here and referenced by workspace members