[package]
name = "counter-deployment-script"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deploy_counter_with_note"
path = "src/deploy_counter_with_note.rs"

[[bin]]
name = "wallet_p2id_example"
path = "src/wallet.rs"

[dependencies]
miden-client = { version = "0.10.0", features = ["testing", "tonic", "sqlite"] }
miden-lib = { version = "0.10.0", default-features = false }
miden-objects = { version = "0.10.0", default-features = false, features = ["testing"] }
miden-crypto = { version = "0.15.5", features = ["executable"] }
miden-assembly = "0.15.0"
miden-mast-package = "0.15.0"
miden-core = { version = "0.15.0" }
# Compiler dependencies for real compilation
midenc-frontend-wasm = "0.4.0"
midenc-hir = "0.4.0"
midenc-session = "0.4.0"
midenc-compile = "0.4.0"
midenc-codegen-masm = "0.4.0"
cargo-miden = "0.4.0"
winter-utils = "0.13.1"
rand = { version = "0.9" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "macros", "fs"] }
rand_chacha = "0.9.0"